# Updater_Prototype

./: .gitignore  Cargo.toml  LICENSE  README.md  UmlerEquipmentQueryService_1.wsdl  db_ref.txt  umler_updater-log.txt  wsdl-report.html
src/: connection.rs  dbInterface.rs  dbStructs.rs  main.rs  menu.rs  mysql_typecheck.rs  pathprep.rs  scrap.rs  settings.rs  splash.rs  wsdl_receive.rs  wsdl_send.rs  xml_formatter.rs
