[package]
name = "Updater_Prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
mysql = "22.1.0"
mysql_common = "0.29.0"
dotenv = "0.15.0"
chrono = "0.4.19"
thrift = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.2", features = ["full"] }